upgrade the project